--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <div class="container">
         <nav>
             <img src="images/Logo.png" class="logo">
-            <ul>
+            <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
+            <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p>Tech, Climate, and AI Enthusiast</p>
@@ -69,7 +71,7 @@
     </div>
 <!-----------------------Service--------------------------->
 
-<div class="services">
+<div id="services">
     <div class="container">
         <h1 class="sub-title">My Service</h1>
         <div class="services-list">
@@ -77,19 +79,19 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Developer</h2>
                 <p>Designing and developing responsive and user-friendly websites to enhance user experience and ensure smooth, efficient navigation across devices.</p>
-                <a href="#">learn more</a>
+                <a href="#web">learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop"></i>
                 <h2>UI/UX Design</h2>
                 <p>Designing the structural framework of websites, creating intuitive user interfaces with a focus on enhancing user experience.</p>
-                <a href="#">learn more</a>
+                <a href="#uiux">learn more</a>
             </div>
             <div>
                 <i class="fa fa-table"></i>
                 <h2>Data Analyst</h2>
                 <p>Analyzing and interpreting complex datasets to extract actionable insights and support data-driven decision-making.</p>
-                <a href="#">learn more</a>
+                <a href="#data">learn more</a>
             </div>
         </div>
     </div>
@@ -101,7 +103,7 @@
         <div class="work-list">
             <div class="work">
                 <img src="images/webdev.png">
-                <div class="layer">
+                <div class="layer" id="web">
                     <h3>Front-End Developer</h3>
                     <p>Developed a web page that displays interactive, dynamic, and tailored view of weather trends over time</p>
                     <a href="https://drive.google.com/drive/folders/1RDW3q5CuI72jdfkZFCf7wArUQsm-ui1W?usp=drive_link" target=”_blank”>
@@ -110,7 +112,7 @@
             </div>
             <div class="work">
                 <img src="images/uiux.png">
-                <div class="layer">
+                <div class="layer" id="uiux">
                     <h3>UI/UX Designer</h3>
                     <p>Designed framework of web interface for displaying data along with spatial location information</p>
                     <a href="https://drive.google.com/drive/folders/1bCvYbJGbBmV8oWSgpp5-eQiI2-yHmT6G?usp=drive_link" target=”_blank”>
@@ -119,7 +121,7 @@
             </div>
             <div class="work">
                 <img src="images/analyst.png">
-                <div class="layer">
+                <div class="layer" id="data">
                     <h3>Data Analyst</h3>
                     <p>Analyzing weather parameters to support weather modification operations and assessing impacts on reservoir water levels and inflow</p>
                     <a href="https://drive.google.com/drive/folders/12xpQcIYN9WBJ3cHqQijUUcaI9K_rxIgL?usp=drive_link" target=”_blank”>
@@ -131,19 +133,20 @@
     </div>
 </div>
 <!--------------------Contact---------------------------->
-<div class="contact">
+<div id="contact">
     <div class="container">
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-paper-plane"></i>rendyfattah132@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>085335889288</p>
                 <div class="social-icons">
                     <a href="https://www.instagram.com/rendy.rspati"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://wa.me/6285335889288"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://www.linkedin.com/in/rendy-respati-206556272/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/rendyfattah"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/catyy.jpg" download class="btn btn2">Download CV</a>
+                <div class="cv">
+                    <a href="/images/cv.pdf" download class="btn btn2">Download CV<br>(not available right now)</a>
+                </div>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -158,7 +161,7 @@
     </div>
     <div class="copyright">
         <div class="cpt"></div>
-        <p>Made with heart by Rendy</p>
+        <p>Rendy Portfolio</p>
         <div class="cpt"></div>
         <p>Last Updated: 2024, 25<sup>th</sup> Dec</p>
     </div>
@@ -197,6 +200,15 @@
         })
         .catch(error => console.error('Error!', error.message))
     })
+  </script>
+  <script>
+    var sidemenu = document.getElementById('sidemenu');
+    function openmenu(){
+        sidemenu.style.right = '0';
+    }
+    function closemenu(){
+        sidemenu.style.right = '-200px';
+    }
   </script>
 </body>
 </html>
